# serializer version: 1
# name: TestAsyncDeletion.test_delete_cohortpeople
  '''
  
  SELECT team_id,
         cohort_id,
         min(version)
  FROM cohortpeople
  WHERE (team_id = 99999
         AND cohort_id = 99999)
  GROUP BY team_id,
           cohort_id
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople.1
  '''
  
  SELECT count()
  FROM system.mutations
  WHERE database = 'posthog_test'
    AND table = 'cohortpeople'
    AND NOT is_done
    AND NOT is_killed
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople.2
  '''
  
  SELECT count()
  FROM system.mutations
  WHERE database = 'posthog_test'
    AND table = 'cohortpeople'
    AND NOT is_done
    AND NOT is_killed
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople.3
  '''
  
  SELECT count()
  FROM system.mutations
  WHERE database = 'posthog_test'
    AND table = 'cohortpeople'
    AND NOT is_done
    AND NOT is_killed
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople.4
  '''
  SELECT count()
  FROM cohortpeople
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople_version
  '''
  
  SELECT team_id,
         cohort_id,
         min(version)
  FROM cohortpeople
  WHERE (team_id = 99999
         AND cohort_id = 99999)
  GROUP BY team_id,
           cohort_id
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople_version.1
  '''
  
  SELECT count()
  FROM system.mutations
  WHERE database = 'posthog_test'
    AND table = 'cohortpeople'
    AND NOT is_done
    AND NOT is_killed
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople_version.2
  '''
  
  SELECT count()
  FROM system.mutations
  WHERE database = 'posthog_test'
    AND table = 'cohortpeople'
    AND NOT is_done
    AND NOT is_killed
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople_version.3
  '''
  
  SELECT count()
  FROM system.mutations
  WHERE database = 'posthog_test'
    AND table = 'cohortpeople'
    AND NOT is_done
    AND NOT is_killed
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople_version.4
  '''
  SELECT count()
  FROM cohortpeople
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_groups
  '''
  
  SELECT DISTINCT team_id,
                  $group_0
  FROM events
  WHERE (team_id = 99999
         AND $group_0 = 'foo')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_groups.1
  '''
  
  SELECT DISTINCT team_id,
                  $group_0
  FROM events_json
  WHERE (team_id = 99999
         AND $group_0 = 'foo')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_groups_when_not_done
  '''
  
  SELECT DISTINCT team_id,
                  $group_0
  FROM events
  WHERE (team_id = 99999
         AND $group_0 = 'foo')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_groups_when_not_done.1
  '''
  
  SELECT DISTINCT team_id,
                  $group_0
  FROM events_json
  WHERE (team_id = 99999
         AND $group_0 = 'foo')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_person
  '''
  
  SELECT DISTINCT team_id,
                  person_id
  FROM events
  WHERE (team_id = 99999
         AND person_id = '00000000-0000-0000-0000-000000000000')
    AND _timestamp <= '2024-01-01 00:00:00'
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_person.1
  '''
  
  SELECT DISTINCT team_id,
                  person_id
  FROM events_json
  WHERE (team_id = 99999
         AND person_id = '00000000-0000-0000-0000-000000000000')
    AND _timestamp <= '2024-01-01 00:00:00'
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_person_when_not_done
  '''
  
  SELECT DISTINCT team_id,
                  person_id
  FROM events
  WHERE (team_id = 99999
         AND person_id = '00000000-0000-0000-0000-000000000000')
    AND _timestamp <= '2024-01-01 00:00:00'
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_person_when_not_done.1
  '''
  
  SELECT DISTINCT team_id,
                  person_id
  FROM events_json
  WHERE (team_id = 99999
         AND person_id = '00000000-0000-0000-0000-000000000000')
    AND _timestamp <= '2024-01-01 00:00:00'
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_team_when_not_done
  '''
  
  SELECT DISTINCT team_id
  FROM events
  WHERE team_id = 99999
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_team_when_not_done.1
  '''
  
  SELECT DISTINCT team_id
  FROM events_json
  WHERE team_id = 99999
  '''
# ---
# name: TestAsyncDeletion.test_mark_team_deletions_done
  '''
  
  SELECT DISTINCT team_id
  FROM events
  WHERE team_id = 99999
  '''
# ---
# name: TestAsyncDeletion.test_mark_team_deletions_done.1
  '''
  
  SELECT DISTINCT team_id
  FROM events_json
  WHERE team_id = 99999
  '''
# ---
